--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@ The conference aspires to provide a platform for researchers across the world to
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/contact.icccs@bmsce.ac.in" method="post" role="form" class="php-email-form">
+            <form action="https://formsubmit.co/kishanagarwal845@gmail.com" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
