--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ The conference aspires to provide a platform for researchers across the world to
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/Fazirulhisyam Hashim.jpg" alt="">
+              <img src="assets/img/Fazirulhisyam Hashim.png" alt="">
               <h4><a href=" https://my.linkedin.com/in/fazirulhisyam-hashim-3a1025168/">Fazirulhisyam Hashim</a></h4>
               <span>Universiti Putra Malaysia,Malaysia</span>
             </div>
@@ -353,7 +353,7 @@ The conference aspires to provide a platform for researchers across the world to
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/Veena Mendiratta.jpg" alt="">
+              <img src="assets/img/Veena Mendiratta.png" alt="">
               <h4><a href="https://www.linkedin.com/in/veenamendiratta/">Veena Mendiratta</a></h4>
               <span> Northwestern University,USA</span>
               
