--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ The conference aspires to provide a platform for researchers across the world to
             <div class="member">
               <img src="assets/img/muralidhar.jpg" alt="">
               <h4><a href="https://bmsce.ac.in/home/facultyProfile/306/Dr-S-Muralidhara">Dr S Muralidhara</a></h4>
-              <span>Principal & Chairman</span>
+              <span>Principal</span>
              
             </div>
           </div>
@@ -233,7 +233,7 @@ The conference aspires to provide a platform for researchers across the world to
             <div class="member">
               <img src="assets/img/Dr_Suresh_Ramaswwamy_Reddy.jpeg" alt="">
               <h4><a href="https://bmsce.ac.in/home/facultyProfile/302/Dr-Suresh-Ramaswwamyreddy">Dr Suresh Ramaswamy Reddy</a></h4>
-              <span>Member, </br>Vice Principal - Academic (Ex-officio)</span>
+              <span>Member, </br>Vice Principal - Academic</span>
              
             </div>
           </div>
