--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ The conference aspires to provide a platform for researchers across the world to
             <div class="member">
               <img src="assets/img/Dr_Bheemsha.jpg" alt="">
               <h4><a href="https://bmsce.ac.in/home/facultyProfile/208/Dr-BHEEMSHA">Dr Bheemsha Arya</a></h4>
-              <span>CTO</span>
+              <span>Vice Principal - Admin</span>
               
             </div>
           </div>
